--- a/css/style.scss
+++ b/css/style.scss
@@ -1190,6 +1190,31 @@
        }
    }
 // ---end--here---//
+
+// ---wts-app-sticky---//
+
+.wtsapp-sticky-wrp{
+    .float{
+        position:fixed;
+        width:60px;
+        height:60px;
+        bottom:40px;
+        right:40px;
+        background-color:#25d366;
+        color:#FFF;
+        border-radius:50px;
+        text-align:center;
+        font-size:30px;
+        box-shadow: 2px 2px 3px #999;
+        z-index:100;
+    }
+    
+    .my-float{
+        margin-top:16px;
+    }
+
+}
+ 
 }
  
 
@@ -2127,6 +2152,19 @@
  
 // -------*******---HairLaser-Wrapper------*********----end---here-----------//
 
+
+
+// ------------******** -------Botex_Wrapper------*******---------------//
+.Botox_Wrapper{
+    .Botox-banner{
+       background: url(../image/Botox-banner.png) no-repeat!important;
+       background-size: cover!important;
+       background-position: $mid;  
+    } 
+     
+}
+ 
+// -------*******----Botex_Wrapper-------*********----end---here-----------//
 
 
 .main-bar{
