--- a/css/style.scss
+++ b/css/style.scss
@@ -1194,23 +1194,31 @@
 // ---wts-app-sticky---//
 
 .wtsapp-sticky-wrp{
-    .float{
-        position:fixed;
-        width:60px;
-        height:60px;
-        bottom:40px;
-        right:40px;
-        background-color:#25d366;
-        color:#FFF;
-        border-radius:50px;
-        text-align:center;
-        font-size:30px;
-        box-shadow: 2px 2px 3px #999;
-        z-index:100;
+    position: fixed;
+    top: 50%;
+    right: 8px;
+    z-index: 100;
+    text-align: right;
+    width: 200px;
+    height: 60px;
+    a{ 
+         // width:60px;
+         // height:60px; 
+         //  background-color:#25d366;
+         //   color:#FFF;
+         //  border-radius:50px;
+         //   text-align:center;
+         // font-size:30px;
+         //  box-shadow: 2px 2px 3px #999; 
     }
     
-    .my-float{
-        margin-top:16px;
+    // .my-float{
+    //     margin-top:16px;
+    // }
+    a{
+        img{
+            max-width: 100%;
+        }
     }
 
 }
